# esp32s3-lcd

./: .gitignore  AGENTS.md  Cargo.toml  build.rs
.cargo/: config.toml
scripts/: cargo-run-with-assets.sh
src/: app.rs  board.rs  bus.rs  lib.rs  main.rs
src/assets/: flash.rs  mod.rs  package.rs
src/lcd/: axs15231b.rs  mod.rs  platform.rs  tca9554.rs  touch.rs
src/radio/: mod.rs  wireless.rs
src/rtc/: mod.rs  pcf85063.rs
src/text/: font.rs  mod.rs
ui/: adjust-view.slint  clock-view.slint  components.slint  main.slint
