[package]
edition = "2024"
name = "esp32c3-lcd"
version = "0.1.0"

[[bin]]
name = "esp32c3-lcd"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = { version = "1.1", features = ["defmt", "esp32s3", "unstable"] }

esp-rtos = { version = "0.3.0", features = [
  "defmt",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }

defmt = "1.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32s3"] }

bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
critical-section = "1.2.0"
embedded-io = { version = "0.7.1", features = ["defmt"] }
esp-alloc = { version = "0.10.0", features = ["defmt"] }
esp-radio = { version = "0.18.0", features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32s3",
  "unstable",
  "wifi",
] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
smoltcp = { version = "0.13.0", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

[dev-dependencies]
embedded-test = { version = "0.7.1", features = [
  "defmt",
  "xtensa-semihosting",
] }

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2         # prefer slower builds but better debugging experience
lto = 'fat'
opt-level = 's'
