[package]
edition = "2024"
name = "esp32s3-lcd"
version = "0.1.0"

[[test]]
harness = false
name = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = { version = "1.1", features = ["defmt", "esp32s3", "unstable"] }
esp-rtos = { version = "0.3", features = [
  "defmt",
  "esp-alloc",
  "esp-radio",
  "esp32s3",
] }
defmt = "1.1"
esp-bootloader-esp-idf = { version = "0.5", features = ["defmt", "esp32s3"] }
bleps = { git = "https://github.com/bjoernQ/bleps", package = "bleps", rev = "a5148d8ae679e021b78f53fd33afb8bb35d0b62e", features = [
  "async",
  "macros",
] }
critical-section = "1.2"
embedded-io = { version = "0.7", features = ["defmt"] }
embedded-storage = "0.3"
esp-alloc = { version = "0.10", features = ["defmt"] }
esp-radio = { version = "0.18", features = [
  "ble",
  "coex",
  "defmt",
  "esp-alloc",
  "esp32s3",
  "unstable",
  "wifi",
] }
esp-storage = { version = "0.9", features = ["defmt", "esp32s3"] }
panic-rtt-target = { version = "0.2", features = ["defmt"] }
rtt-target = { version = "0.6", features = ["defmt"] }
slint = { version = "1.17", default-features = false, features = [
  "compat-1-2",
  "libm",
  "renderer-software",
  "unsafe-single-threaded",
] }
smoltcp = { version = "0.13", default-features = false, features = [
  "defmt",
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

[build-dependencies]
flate2 = "1.1"
slint-build = "1.17"

[dev-dependencies]
embedded-test = { version = "0.7", features = ["defmt", "xtensa-semihosting"] }

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.dev.package.esp-storage]
opt-level = 3

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2         # prefer slower builds but better debugging experience
lto = 'fat'
opt-level = 's'
